--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -133,8 +133,23 @@ Por fim, sugere-se a inclusão da competência de comunicação na unidade, tran
 ## 4.1 Estratégia da Organização
 Pegar do Portal da Lucineide o mapa estratégico e criar texto sobre o mesmo.
 
-## 4.2 Estratégia Geral de Governança Digital da APF
-Fazer resumo da EG (Paulo já tem e vai enviar para você melhorar/complementar)
+## 4.2 Estratégia de Governança Digital da Administração Pública Federal  - EGD
+
+A Governança Digital é a utilização, pelo setor público, de tecnologias da informação e comunicação com o objetivo de melhorar a informação e a prestação de serviços, incentivando a participação dos cidadãos no processo de tomada de decisão e tornando o governo mais responsável, transparente e eficaz.
+
+De forma a nortear os programas, projetos, serviços, sistemas e atividades relacionados à Governança Digital, o Decreto nº 8.638, de 15 de janeiro de 2016, determinou ao Ministério do Planejamento, Orçamento, Desenvolvimento e Gestão a edição de uma Estratégia de Governança Digital - EGD, documento que define os objetivos estratégicos, as metas, os indicadores e as iniciativas da Política de Governança Digital da Administração Pública Federal.
+
+A publicação da EGD se deu por meio da Portaria nº 68, de 8 de março de 2016, a qual a aprovou para o período 2016-2019 e atribuiu à Secretaria de Tecnologia da Informação e Comunicação a competência de coordenar a formulação, o monitoramento, a avaliação e a revisão da EGD, com participação das demais unidades que atuam como órgão central dos sistemas estruturantes do Poder Executivo federal.
+
+A EGD se baseia em nove princípios que orientam as atividades de governança digital na Administração Pública Federal: Foco nas necessidades da sociedade; Abertura e transparência; Compartilhamento da capacidade de serviço; Simplicidade; Priorização de serviços públicos disponibilizados em meio digital; Segurança e privacidade; Participação e controle social; Governo como plataforma e Inovação. 
+
+Também são propostos dez objetivos estratégicos, organizados em três eixos estratégicos: Acesso à Informação, Prestação de Serviços e Participação Social, conforme ilustrado a seguir:
+
+![egd](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/egd.png "Diagrama Estratégico da EGD")
+
+Percebe-se que a EGD busca estimular as ações de convergência de esforços quanto às infraestruturas, plataformas, sistemas e serviços entre os órgãos.  Nesse sentido, o Ministério da Cultura já vem realizando diversas ações tanto com os órgãos integrantes do sistema MinC, por meio de um Comitê Integrado com representantes da TI de todos os órgãos (será detalhado adiante), como, também, por meio de parcerias com outros entes públicos externos ao sistema MinC. 
+
+Nessa toada, vale destacar que o PDTIC MinC 2015-2017 foi completamente revisado para seu alinhamento à época do lançamento da EGD, tendo sido publicada uma versão que foi considerada percussora entre os órgãos. Da mesma forma, para elaboração deste PDTIC 2018-2020 buscou-se o alinhamento integral aos objetivos estratégicos e metas propostas pela EGD.
 
 ## 4.3 Estratégica de TIC
 
@@ -158,23 +173,6 @@ Tornar-se um modelo de gestão corporativa de TI pública, baseada em colaboraç
 
 ### 4.4.1 Alinhamento com a Estratégia da Organização
 << gestãoestrategica.cultura.gov.br Descrever as Estratégias da Organização, estabelecidas a partir das principais políticas e planos governamentais e da instituição, e relacioná-las com as necessidades de TI de forma a garantir que as metas e ações de TI sejam organizadas para atendê-las >>
-
-### Diretriz Geral (DG):
-Manter-se alinhada com as áreas de negócio, em busca de auxiliar no alcance dos objetivos estratégicos do MinC.
-
-### Diretrizes Específicas:
-- **D1** - Manter a transparência das suas ações e garantir a execução das deliberações do Comitê de Governança Digital.
-- **D2** - Fomentar a participação das áreas na gestão dos projetos de TI.
-- **D3** - Melhorar a experiência e a satisfação dos usuários de TI do MinC.
-- **D4** - Fortalecer as iniciativas baseadas em software livre e dados abertos.
-- **D5** - Atuar em parceria com as áreas de negócio em busca de soluções conjuntas.
-
-### Princípios Norteadores:
-- **P1** - Colaboração, agilidade e transparência.
-- **P2** - Garantir a relação e a interação entre indivíduos.
-- **P3** - Entregar soluções funcionais e criativas.
-- **P4** - Ser responsivo às mudanças.
-
 
 ## 4.5  Objetivos Estratégicos
 
