--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -131,7 +131,10 @@ Por fim, sugere-se a inclusão da competência de comunicação na unidade, tran
 # 4  REFERENCIAL ESTRATÉGICO
 
 ## 4.1 Estratégia da Organização
-Pegar do Portal da Lucineide o mapa estratégico e criar texto sobre o mesmo.
+
+O mapa estratégico do Ministério da Cultura – MinC  está estruturado em três perspectivas: Inovação e Pessoas, Resultados Institucionais e Referencial Estratégico. Essas perspectivas representam um encadeamento lógico da estratégia de atuação do órgão. Cada uma engloba um conjunto de objetivos estratégicos que retratam os principais desafios a serem enfrentados pelo MinC no alcance de sua visão de futuro e no cumprimento de sua missão institucional. As perspectivas, quando vistas em conjunto, permitem uma visão completa da estratégia da instituição e contam a história da estratégia de uma forma clara e de fácil compreensão.
+
+![egd](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/estrategiaminc.png "Mapa Estratégico do Ministério da Cultura.")
 
 ## 4.2 Estratégia de Governança Digital da Administração Pública Federal  - EGD
 
@@ -211,24 +214,23 @@ etc.
 | Plano de Dados abertos integrado do Sistema MinC                                                 | Inexistência de escritório de aquisições de TIC                                                       | 
 | Catálogo de Serviços orientado aos usuários                                                      | Ausência de um Plano de Continuidade de Negócios                                                      | 
 | Cargos de gestão ocupados por servidores carreira                                                | Reduzido quadro de servidores efetivos                                                                | 
-| Automação dos processos de desenvolvimento de software                                           | Falta de cultura de processos           | 
-| Utilização das últimas tecnologias de mercado                                                    |                                   | 
-| Apoio da SGE e da Alta Administração                                                             |                       | 
+| Automação dos processos de desenvolvimento de software                                           | Falta de cultura de processos                                                                         | 
+| Utilização das últimas tecnologias de mercado                                                    |                                                                                                       | 
+| Apoio da SGE e da Alta Administração                                                             |                                                                                                       | 
 | Inovação no desenvolvimento de software                                                          |                                                                                                       | 
-| Rede de laboratórios de software livre em Universidades Federais                                                                      |                                                                                                       |
+| Rede de laboratórios de software livre em Universidades Federais                                 |                                                                                                       |
 
 
 | Oportunidades (O)                                                                                                        | Ameaças (T)                                                                                                                   | 
 |--------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------| 
-| Simplificar o desenvolvimento de novas soluções por meio do uso intenso de software livre                                | Alta rotatividade dos dirigentes do negócio                                                                                  | 
-| Prover plataformas (IaaS,PaaS,SaaS) como serviço para entes da Administração Pública                                     |                                                                                    | 
+| Simplificar o desenvolvimento de novas soluções por meio do uso intenso de software livre                                | Alta rotatividade dos dirigentes do negócio                                                                                   | 
+| Prover plataformas (IaaS,PaaS,SaaS) como serviço para entes da Administração Pública                                     | Corte de orçamento de TIC                                                                                                     | 
 | Promover a integração do Sistema MinC por meio do Comitê Integrado de TIC formalmente instituído                         | Interferência da política externa que impacta nas decisões estratégicas e operacionais internas                               | 
-|                                                                                                                          | Superestimação das atribuições da CGTEC pelas áreas finalísticas                                                           | 
-| Cooperação com outros órgãos da administração pública no compartilhamento de boas práticas de TIC                        | Processos de negócio do Ministério não são mapeados na sua totalidade                                            | 
-| Implantar tecnologias para gestão do conhecimento institucional                                                          | Todas as áreas finalísticas dependem dos serviços de TIC para o alcance dos objetivos estratégicos | 
+| Aprimorar canais de comunicação para envolvimento prévio da CGTEC nos projetos finalísticos                              | Superestimação das atribuições da CGTEC pelas áreas finalísticas                                                              | 
+| Cooperação com outros órgãos da administração pública no compartilhamento de boas práticas de TIC                        | Processos de negócio do Ministério não são mapeados na sua totalidade                                                         | 
+| Implantar tecnologias para gestão do conhecimento institucional                                                          | Todas as áreas finalísticas dependem dos serviços de TIC para o alcance dos objetivos estratégicos                            | 
 | Organizar, simplificar e customizar a prestação de serviços de TIC                                                       | Não é realizada uma efetiva gestão da informação                                                                              | 
 | Ampliar a divulgação dos serviços oferecidos pela TIC                                                                    | Baixa periodicidade de reuniões do Comitê de Governança Digital                                                               | 
-| Aprimorar canais de comunicação para envolvimento prévio da CGTEC nos projetos finalísticos                              | Corte de orçamento de TIC                                                                                                            | 
 
 
 ## 4.8 Fatores Críticos de Sucesso
