--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -88,11 +88,16 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 
 
 # 2  TERMOS E ABREVIAÇÕES
-- Ministério da Cultura - MinC
-- Comitê de Governança Digital - CGD
-- Coordenação-Geral de Infraestrutura Tecnológica - CGTEC
-- Plano Diretor de Tecnologia da Informação e Comunicações – PDTIC
-- Tecnologia da Informação e Comunicações – TIC
+- **MinC** Ministério da Cultura
+- **CGD** Comitê de Governança Digital
+- **CGTEC** Coordenação-Geral de Infraestrutura Tecnológica
+- **TIC** Tecnologia da Informação e Comunicações
+- **PDTIC** Plano Diretor de Tecnologia da Informação e Comunicações
+- **SISP** Sistema de Administração dos Recursos de Tecnologia da Informação do Poder Executivo Federal
+- **PEI** Planejamento Estratégico Institucional
+- **PPA** Plano Plurianual
+- **LOA** Lei Orçamentária Anual
+- **LDO** Lei de Diretrizes Orçamentárias
 
 # 3 ORGANIZAÇÃO DA TIC 
 
@@ -156,21 +161,21 @@ Nessa toada, vale destacar que o PDTIC MinC 2015-2017 foi completamente revisado
 
 ## 4.3 Estratégia de TIC
 
-### Missão
+### Missão da TIC
 Oferecer para os usuários do Sistema Minc e para os cidadãos brasileiros uma experiência tecnológica simples e intuitiva, por meio de ferramentas de gestão participativa, de transparência de informações e da oferta de serviços digitais que facilitem a relação do cidadão com as políticas públicas do Ministério da Cultura.
 
-### Visão
+### Visão da TIC
 Tornar-se um modelo de gestão corporativa de TI pública, baseada em colaboração e cooperação, com capacidade de atendimento de alta qualidade para seus usuários, com foco no cidadão, com o apoio de soluções livres, métodos ágeis e governança participativa de TI.
-
-### Valores
-- Comunicação – Primar pela comunicação ativa entre unidades e usuários, a fim de proporcionar a troca de ideias, o diálogo e o compartilhamento da informação.
-- Eficiência – Entregar a informação adequada, no tempo certo, de maneira mais econômica e produtiva.
-- Continuidade – Ater-se ao que foi planejado, em busca da melhoria contínua.
-- Transparência – Dar visibilidade nas ações da CGTEC, aos usuários e às unidades.
-- Confiabilidade – Manter a informação confiável e disponível aos gestores e demais envolvidos.
-- Cooperação – Atuar em equipe na busca de solução, respeitando as diferenças.
-- Sustentabilidade – Conquistar a excelência da gestão pela capacidade interna de lidar com as oportunidades e ameaças.
-- Inovação – Buscar oportunidades que proporcionem melhorias na entrega dos serviços ao MinC.
+ 
+### Valores da TIC
+- **Comunicação** – Primar pela comunicação ativa entre unidades e usuários, a fim de proporcionar a troca de ideias, o diálogo e o compartilhamento da informação.
+- **Eficiência** – Entregar a informação adequada, no tempo certo, de maneira mais econômica e produtiva.
+- **Continuidade** – Ater-se ao que foi planejado, em busca da melhoria contínua.
+- **Transparência** – Dar visibilidade nas ações da CGTEC, aos usuários e às unidades.
+- **Confiabilidade** – Manter a informação confiável e disponível aos gestores e demais envolvidos.
+- **Cooperação** – Atuar em equipe na busca de solução, respeitando as diferenças.
+- **Sustentabilidade** – Conquistar a excelência da gestão pela capacidade interna de lidar com as oportunidades e ameaças.
+- **Inovação** – Buscar oportunidades que proporcionem melhorias na entrega dos serviços ao MinC.
 
 ## 4.4  Diretrizes de TIC
 
@@ -187,7 +192,6 @@ São diretrizes de TIC de acordo com a **Política de Governança de Tecnologia 
 
 ### Diretrizes para o **Planejamento de TIC**
 
-
 - **I** – elaboração e manutenção de planos de TIC que contemplem objetivos alinhados às estratégias organizacionais;
 - **II** – definição de indicadores e fixação de metas para avaliação do alcance dos objetivos estabelecidos;
 - **III** - ampla participação das unidades organizacionais na elaboração dos planos de TIC;
@@ -196,38 +200,37 @@ São diretrizes de TIC de acordo com a **Política de Governança de Tecnologia 
 
 ### Diretrizes para **Gestão de Projetos de TIC**
  
-- I - documentação mínima necessária: o processo de gerenciamento deve exigir apenas a documentação essencial para a gestão do projeto e para a qualidade do produto final, de acordo com as características de cada unidade do MinC;
-- II - comunicação transparente: o líder do projeto deve manter comunicação direta e transparente com os envolvidos, produzindo documentação capaz de demonstrar a situação do projeto e viabilizar a tomada de decisões, com grau de formalidade adaptado às necessidades de cada unidade do MinC;
-- III - atribuições claras e compartilhamento de responsabilidades: o processo deve identificar os principais interessados que assumem papéis no projeto e que participam das reuniões de decisão, de acordo com as suas atribuições e níveis de autoridade;
-- IV - processo flexível: as fases do ciclo de vida do projeto, as reuniões de decisão e o processo de gerenciamento devem ser flexíveis para atender às diferentes unidades do MinC, áreas de conhecimento, contextos e características específicas dos projetos, observados padrões mínimos sugeridos pela MGP-TI e avaliadas as possibilidades de adaptação; e
-- V - informação documentada: a MGP-TI concentra-se no conteúdo das informações produzidas no processo de gerenciamento de projetos de tecnologia da informação e comunicação,  possuindo formatos de documentos sugeridos que podem ser adaptados.
+- **I** - documentação mínima necessária: o processo de gerenciamento deve exigir apenas a documentação essencial para a gestão do projeto e para a qualidade do produto final, de acordo com as características de cada unidade do MinC;
+- **II** - comunicação transparente: o líder do projeto deve manter comunicação direta e transparente com os envolvidos, produzindo documentação capaz de demonstrar a situação do projeto e viabilizar a tomada de decisões, com grau de formalidade adaptado às necessidades de cada unidade do MinC;
+- **III** - atribuições claras e compartilhamento de responsabilidades: o processo deve identificar os principais interessados que assumem papéis no projeto e que participam das reuniões de decisão, de acordo com as suas atribuições e níveis de autoridade;
+- **IV** - processo flexível: as fases do ciclo de vida do projeto, as reuniões de decisão e o processo de gerenciamento devem ser flexíveis para atender às diferentes unidades do MinC, áreas de conhecimento, contextos e características específicas dos projetos, observados padrões mínimos sugeridos pela MGP-TI e avaliadas as possibilidades de adaptação; e
+- **V** - informação documentada: a MGP-TI concentra-se no conteúdo das informações produzidas no processo de gerenciamento de projetos de tecnologia da informação e comunicação,  possuindo formatos de documentos sugeridos que podem ser adaptados.
 
 ### Diretrizes para **Gestão de Riscos de TIC**
 
-- I - fomentar a cultura de gestão de riscos como fator essencial para implantar as estratégias e planos de TIC, a tomada de decisões e  o alcance dos objetivos relacionados à TIC;
-- II - os riscos de TIC devem ser identificados, analisados, avaliados, tratados e monitorados de forma contínua; e
-- III - a alta administração deverá estabelecer critérios para tratamento dos riscos relacionados à TIC, considerando aspectos legais, financeiros, sociais, culturais, operacionais, tecnológicos e negociais do Ministério da Cultura.
+- **I** - fomentar a cultura de gestão de riscos como fator essencial para implantar as estratégias e planos de TIC, a tomada de decisões e  o alcance dos objetivos relacionados à TIC;
+- **II** - os riscos de TIC devem ser identificados, analisados, avaliados, tratados e monitorados de forma contínua; e
+- **III** - a alta administração deverá estabelecer critérios para tratamento dos riscos relacionados à TIC, considerando aspectos legais, financeiros, sociais, culturais, operacionais, tecnológicos e negociais do Ministério da Cultura.
 
 ### Diretrizes para **Gestão dos Serviços de TIC** 
 
-- I - os serviços de TIC devem ser incluídos e formalizados no Catálogo de Serviços de TIC;
-- II - os níveis de serviços de TIC devem ser definidos e revisados periodicamente;
-- III - os processos operacionais, a infraestrutura e as aplicações devem ser gerenciados de forma a cumprir os níveis de serviços; e
-- IV - os usuários dos serviços de TIC devem observar a Política de Segurança da Informação e Comunicação (POSIC) vigente no âmbito do MinC. 
+- **I** - os serviços de TIC devem ser incluídos e formalizados no Catálogo de Serviços de TIC;
+- **II** - os níveis de serviços de TIC devem ser definidos e revisados periodicamente;
+- **III** - os processos operacionais, a infraestrutura e as aplicações devem ser gerenciados de forma a cumprir os níveis de serviços; e
+- **IV** - os usuários dos serviços de TIC devem observar a Política de Segurança da Informação e Comunicação (POSIC) vigente no âmbito do MinC. 
 
 ### Diretrizes para **Provimento de Soluções de TIC**
 
-- I - concepção de soluções de TIC com foco no usuário, na otimização dos processos de trabalho, na integração de soluções e informações, na reutilização de dados ou componentes e na ampliação da oferta de serviços em meio digital;
-- II - as plataformas tecnológicas governamentais devem implementar soluções em software livre e dados abertos, alinhadas às melhores práticas de governo aberto, garantindo os princípios constitucionais e a soberania tecnológica;
-- III - consideração, quando da concepção de soluções de TIC a serem desenvolvidas ou adquiridas, de requisitos não funcionais relevantes, em especial dos requisitos de segurança da informação e dos requisitos relativos à disponibilidade, ao desempenho e à usabilidade da solução;
-- IV - o provimento de soluções de TIC por meio de contratações devem observar a legislação pertinente em vigor, as boas práticas e as orientações dos órgãos de controle; 
-- V - sempre que aplicável, a remuneração pelo provimento de soluções de TIC deve ser definida em função de resultados com monitoramento e revisão periódica de Acordos de Nível de Serviço;
-- VI -  as arquiteturas e padrões tecnológicos devem satisfazer critérios técnicos adequadamente definidos e que se baseiem, preferencialmente, em padrões comuns de mercado e em diretrizes institucionais ou do Poder Executivo Federal; e
-- VII - atuação proativa e continuada com vistas à identificação de lacunas de conhecimento e ao desenvolvimento de competências dos usuários previamente à implantação de novas soluções de TIC.
-
+- **I** - concepção de soluções de TIC com foco no usuário, na otimização dos processos de trabalho, na integração de soluções e informações, na reutilização de dados ou componentes e na ampliação da oferta de serviços em meio digital;
+- **II** - as plataformas tecnológicas governamentais devem implementar soluções em software livre e dados abertos, alinhadas às melhores práticas de governo aberto, garantindo os princípios constitucionais e a soberania tecnológica;
+- **III** - consideração, quando da concepção de soluções de TIC a serem desenvolvidas ou adquiridas, de requisitos não funcionais relevantes, em especial dos requisitos de segurança da informação e dos requisitos relativos à disponibilidade, ao desempenho e à usabilidade da solução;
+- **IV** - o provimento de soluções de TIC por meio de contratações devem observar a legislação pertinente em vigor, as boas práticas e as orientações dos órgãos de controle; 
+- **V** - sempre que aplicável, a remuneração pelo provimento de soluções de TIC deve ser definida em função de resultados com monitoramento e revisão periódica de Acordos de Nível de Serviço;
+- **VI** -  as arquiteturas e padrões tecnológicos devem satisfazer critérios técnicos adequadamente definidos e que se baseiem, preferencialmente, em padrões comuns de mercado e em diretrizes institucionais ou do Poder Executivo Federal; e
+- **VII** - atuação proativa e continuada com vistas à identificação de lacunas de conhecimento e ao desenvolvimento de competências dos usuários previamente à implantação de novas soluções de TIC.
 
 ## 4.5 Alinhamento com a Estratégia da Organização
-<< gestãoestrategica.cultura.gov.br Descrever as Estratégias da Organização, estabelecidas a partir das principais políticas e planos governamentais e da instituição, e relacioná-las com as necessidades de TI de forma a garantir que as metas e ações de TI sejam organizadas para atendê-las >>
+<<Descrever as Estratégias da Organização, estabelecidas a partir das principais políticas e planos governamentais e da instituição, e relacioná-las com as necessidades de TI de forma a garantir que as metas e ações de TI sejam organizadas para atendê-las >>
 
 ## 4.6  Objetivos Estratégicos
 
