--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -25,12 +25,14 @@ Paulo Henrique de Carvalho Moreira
 **Coordenador de Governança**
 
 **Comitê de Governança Digital - CGD:**  
-Mansur Bassit (SEC)  
-Adão Cândido (SADI)  
-Mariana Ribas (SAV)  
-Débora Albuquerque (SCDC)  
-José Paulo Soares Martins (SEFIC)  
-Raimundo Benoni Franco (SEINFRA)  
+Subsecretaria de Planejamento, Orçamento e Administração (SPOA)
+Secretaria da Cidadania e da Diversidade Cultural (SCDC)
+Secretaria do Audiovisual (SAV)
+Secretaria da Economia da Cultura (SEC)
+Secretaria de Articulação e Desenvolvimento Institucional (SADI)
+Secretaria de Fomento e Incentivo à Cultura (SEFIC)
+Secretaria de Infraestrutura Cultural (SEINFRA)
+
  
 **Equipe de elaboração do PDTIC:**  
 Claudilea de Queiroz Sousa  
@@ -93,11 +95,19 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 - **CGTEC** Coordenação-Geral de Infraestrutura Tecnológica
 - **TIC** Tecnologia da Informação e Comunicações
 - **PDTIC** Plano Diretor de Tecnologia da Informação e Comunicações
+- **CITIC** Comitê Integrado de Tecnologia da Informação e Comunicação do Ministério da Cultura e de suas Entidades Vinculadas
 - **SISP** Sistema de Administração dos Recursos de Tecnologia da Informação do Poder Executivo Federal
 - **PEI** Planejamento Estratégico Institucional
 - **PPA** Plano Plurianual
 - **LOA** Lei Orçamentária Anual
 - **LDO** Lei de Diretrizes Orçamentárias
+- **ANCINE** Agência Nacional do Cinema 
+- **FBN** Fundação Biblioteca Nacional
+- **FCRB** Fundação Casa de Rui Barbosa 
+- **FCP** Fundação Cultural Palmares
+- **FUNARTE** Fundação Nacional de Artes  
+- **IBRAM** Instituto Brasileiro de Museus 
+- **IPHAN** Instituto do Patrimônio Histórico e Artístico Nacional
 
 # 3 ORGANIZAÇÃO DA TIC 
 
@@ -240,7 +250,34 @@ Implantar tecnologias para gestão do conhecimento institucional
 
 Os objetivos estratégicos são resultados que a CGTEC pretende alcançar, desdobrados a partir da Visão, como condutores do caminho a ser seguido para alcançá-la. Neste sentido, o planejamento estratégico de TI, traz esses novos direcionadores, para o momento de transição e alinhamento do órgão, sem deixar de se relacionar com o passado, mas com prioridade e atenção para o futuro.
 
-## 4.7 CITIC
+## 4.7 Estratégia do Comitê Integrado de Tecnologia da Informação **CITIC**
+
+Conforme a Portaria Nº 092, de 22 de Detembro de 2017, foi instituido o Comitê Integrado de Tecnologia da Informação e Comunicação do Ministério da Cultura e de suas Entidades Vinculadas.
+
+### 4.7.1 Participantes do CITIC
+
+- **MinC** Ministério da Cultura
+- **ANCINE** Agência Nacional do Cinema 
+- **FBN** Fundação Biblioteca Nacional
+- **FCRB** Fundação Casa de Rui Barbosa 
+- **FCP** Fundação Cultural Palmares
+- **FUNARTE** Fundação Nacional de Artes  
+- **IBRAM** Instituto Brasileiro de Museus 
+- **IPHAN** Instituto do Patrimônio Histórico e Artístico Nacional
+
+
+### 4.7.2 Competências do CITIC
+
+- Articular e promover **ações conjuntas relativas aos recursos de TIC** 
+- Promover o intercâmbio de conhecimento entre seus participantes com o objetivo de **uniformizar a governança e a gestão dos recursos de TIC**
+- Orientar o Comitê de Governança Digital do MinC e instâncias equivalentes dos participantes, no sentido de **viabilizar o compartilhamento** de:
+ - b) metodologias, tecnologias e demais recursos de TIC
+ - a) processos e procedimentos para aquisição de bens e contratação de serviços na área de TIC de uso comum.
+
+
+
+
+
  Alinhamento/Unificação das TICs pelo CETIC
 Normativo legal já publicado e aprovado, portaria XXXX.
 
