--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -25,14 +25,13 @@ Paulo Henrique de Carvalho Moreira
 **Coordenador de Governança**
 
 **Comitê de Governança Digital - CGD:**  
-Subsecretaria de Planejamento, Orçamento e Administração (SPOA)
-Secretaria da Cidadania e da Diversidade Cultural (SCDC)
-Secretaria do Audiovisual (SAV)
-Secretaria da Economia da Cultura (SEC)
-Secretaria de Articulação e Desenvolvimento Institucional (SADI)
-Secretaria de Fomento e Incentivo à Cultura (SEFIC)
-Secretaria de Infraestrutura Cultural (SEINFRA)
-
+Subsecretaria de Planejamento, Orçamento e Administração (SPOA)  
+Secretaria da Cidadania e da Diversidade Cultural (SCDC)  
+Secretaria do Audiovisual (SAV)  
+Secretaria da Economia da Cultura (SEC)  
+Secretaria de Articulação e Desenvolvimento Institucional (SADI)  
+Secretaria de Fomento e Incentivo à Cultura (SEFIC)  
+Secretaria de Infraestrutura Cultural (SEINFRA)  
  
 **Equipe de elaboração do PDTIC:**  
 Claudilea de Queiroz Sousa  
@@ -242,17 +241,18 @@ São diretrizes de TIC de acordo com a **Política de Governança de Tecnologia 
 ## 4.5 Alinhamento com a Estratégia da Organização
 <<Descrever as Estratégias da Organização, estabelecidas a partir das principais políticas e planos governamentais e da instituição, e relacioná-las com as necessidades de TI de forma a garantir que as metas e ações de TI sejam organizadas para atendê-las >>
 
-## 4.6  Objetivos Estratégicos
+## 4.6 Objetivos Estratégicos
 
--- MAPA DE OBJETIVOS --
+Conforme preconiza a EGD, os objetivos estratégicos foram categorizados em três eixos: acesso à informação, prestação de serviços e participação social.
 
-Implantar tecnologias para gestão do conhecimento institucional 
+![objetivosegd](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/objetivosegd.png "Objetivos Estratégicos da EGD")
 
-Os objetivos estratégicos são resultados que a CGTEC pretende alcançar, desdobrados a partir da Visão, como condutores do caminho a ser seguido para alcançá-la. Neste sentido, o planejamento estratégico de TI, traz esses novos direcionadores, para o momento de transição e alinhamento do órgão, sem deixar de se relacionar com o passado, mas com prioridade e atenção para o futuro.
 
 ## 4.7 Estratégia do Comitê Integrado de Tecnologia da Informação **CITIC**
 
-Conforme a Portaria Nº 092, de 22 de Detembro de 2017, foi instituido o Comitê Integrado de Tecnologia da Informação e Comunicação do Ministério da Cultura e de suas Entidades Vinculadas.
+O Comitê Integrado de Tecnologia da Informação e Comunicação do Ministério da Cultura e de suas Entidades Vinculadas foi formalmente instituido pela Portaria Nº 092, de 22 de Detembro de 2017.
+
+O objetivo é a unificação e otimização dos recursos de TICs de seus participantes, de forma a racionalizar o gasto público e proporcionar novas soluções compartilhadas entre as infraestruturas, os sistemas estruturantes e os dados dos parcipantes.
 
 ### 4.7.1 Participantes do CITIC
 
@@ -271,30 +271,18 @@ Conforme a Portaria Nº 092, de 22 de Detembro de 2017, foi instituido o Comitê
 - Articular e promover **ações conjuntas relativas aos recursos de TIC** 
 - Promover o intercâmbio de conhecimento entre seus participantes com o objetivo de **uniformizar a governança e a gestão dos recursos de TIC**
 - Orientar o Comitê de Governança Digital do MinC e instâncias equivalentes dos participantes, no sentido de **viabilizar o compartilhamento** de:
- - b) metodologias, tecnologias e demais recursos de TIC
- - a) processos e procedimentos para aquisição de bens e contratação de serviços na área de TIC de uso comum.
+  - b) metodologias, tecnologias e demais recursos de TIC
+  - a) processos e procedimentos para aquisição de bens e contratação de serviços na área de TIC de uso comum.
 
+### 4.7.3 Cenário atual e perspectivas para o CITIC
 
+Atualmente, cada participante do CITIC possui uma gestão de recursos de TIC própria. Neste cenário podemos encontrar redundâncias no trato dos sistemas estruturantes (SEI, RH, Pontos), além de redundâncias nos sistemas e dados finalísticos dos parcipantes. Uma atuação desejável para o CITIC seria a redução das redundâncias na alocação de sistemas estruturantes, bem como o compartilhamento de soluções para as áreas finalístias, como os sistema Mapas Culturais.
 
+Do ponto de vista da infraestrutura, alguns ativos de rede podem ser absorvidos por participantes e outros compartilhados, com vistas a diminuir o gasto público na gestão dos mesmos. Com o aumento de controle e a gestão dos ativos de rede controlados pelo CITIC, pode-se utilizar a redundância física dos ativos para mitigar o risco com os desastres.
 
+Enfim, muitas são as possibilidades de ação conjunta geradas pelo CITIC.
+MELHORAR TEXTO!!!!
 
- Alinhamento/Unificação das TICs pelo CETIC
-Normativo legal já publicado e aprovado, portaria XXXX.
-
-FAZER:
-
-objetivos:
-Unificação e otimização das TICS
-racionalização dos gastos
-migração de solução entre "CPDs"
-redundância de CPDs físicos para reduzir o risco de desastres
-
-áreas:
-infra
-sistemas estruturantes (Sei, Mapas, etc)
-Politica de Dados Abertos
-Planos Estratégicos
-etc.
 
 
 ## 4.8 Análise de SWOT
