--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -37,13 +37,13 @@ Secretaria de Infraestrutura Cultural (SEINFRA)
 Claudilea de Queiroz Sousa  
 Christian Moryah Contiero Miranda    
 Marcus Vinícius Pereira de Menezes  
-Munique Braz Coutinho
+Munique Braz Coutinho  
 Jonas Jeske  
 Sebastião Lima Filho  
 Wuarli Ceza Santos
 
 **Equipe de apoio:**  
-Camila da Silva Panza Amorim
+Camila da Silva Panza Amorim  
 Vera Cristina Alves Pimental Primão  
 
 
@@ -188,7 +188,7 @@ Tornar-se um modelo de gestão corporativa de TI pública, baseada em colaboraç
 
 ## 4.4  Diretrizes de TIC
 
-São diretrizes de TIC de acordo com a **Política de Governança de Tecnologia da Informação e Comunicação**, publicada na Portaria Nº97, de 13 de outubro de 2017
+São diretrizes de TIC de acordo com a **Política de Governança de Tecnologia da Informação e Comunicação** do Ministério da Cultura, publicada na Portaria Nº97, de 13 de outubro de 2017.
 
 ### Diretrizes **Gerais**
 
@@ -238,21 +238,21 @@ São diretrizes de TIC de acordo com a **Política de Governança de Tecnologia 
 - **VI** -  as arquiteturas e padrões tecnológicos devem satisfazer critérios técnicos adequadamente definidos e que se baseiem, preferencialmente, em padrões comuns de mercado e em diretrizes institucionais ou do Poder Executivo Federal; e
 - **VII** - atuação proativa e continuada com vistas à identificação de lacunas de conhecimento e ao desenvolvimento de competências dos usuários previamente à implantação de novas soluções de TIC.
 
-## 4.5 Alinhamento com a Estratégia da Organização
-<<Descrever as Estratégias da Organização, estabelecidas a partir das principais políticas e planos governamentais e da instituição, e relacioná-las com as necessidades de TI de forma a garantir que as metas e ações de TI sejam organizadas para atendê-las >>
+## 4.5 Objetivos Estratégicos da TIC
 
-## 4.6 Objetivos Estratégicos
+reformular com base nos antigos.
 
-Conforme preconiza a EGD, os objetivos estratégicos foram categorizados em três eixos: acesso à informação, prestação de serviços e participação social.
+## 4.6 Plano de Metas e Indicadores de TIC
 
-![objetivosegd](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/objetivosegd.png "Objetivos Estratégicos da EGD")
-
+reformular com base nos antigos.
 
 ## 4.7 Estratégia do Comitê Integrado de Tecnologia da Informação **CITIC**
 
 O Comitê Integrado de Tecnologia da Informação e Comunicação do Ministério da Cultura e de suas Entidades Vinculadas foi formalmente instituido pela Portaria Nº 092, de 22 de Detembro de 2017.
 
 O objetivo é a unificação e otimização dos recursos de TICs de seus participantes, de forma a racionalizar o gasto público e proporcionar novas soluções compartilhadas entre as infraestruturas, os sistemas estruturantes e os dados dos parcipantes.
+
+--> escrever texto ligando CITIC a EGD.
 
 ### 4.7.1 Participantes do CITIC
 
@@ -282,8 +282,6 @@ Do ponto de vista da infraestrutura, alguns ativos de rede podem ser absorvidos 
 
 Enfim, muitas são as possibilidades de ação conjunta geradas pelo CITIC.
 MELHORAR TEXTO!!!!
-
-
 
 ## 4.8 Análise de SWOT
 
@@ -509,16 +507,12 @@ Analisando os dados referentes às justificativas da não realização dos proje
 # 8  CAPACIDADE ESTIMADA DE EXECUÇÃO DA TI
 << Descrever a capacidade estimada para execução de novos projetos e atividades. Deve-se mensurar também a capacidade total de execução da TI, bem como os recursos alocados nos atuais projetos e atividades.>>
 
-# 9  PLANO DE METAS E AÇÕES
+# 9  PORTFOLIO DE PROJETOS
 
-## 9.1  Plano de Metas
-As metas estabelecidas ajudam a direcionar as ações de TI com foco nos seus objetivos estratégicos. As metas aqui definidas deverão ser monitoradas pelo Comitê de Governança Digital, e podem ser alteradas a qualquer momento pelo mesmo. Abaixo são demonstradas as metas e indicadores a serem monitorados, no período proposto, para garantir a persecução dos objetivos estratégicos de TI:
+-- texto explicando a mudança de conceito de ações transformando em projetos --
+Para o atendimento das necessidades priorizadas, foram identificados XXX projetos de TI, que foram incluídos no Portfólio e categorizados de acordo com a natureza das suas ações. A esses projetos foram adicionados mais 35 desde a versão 1.0 deste PDTI. O Portfólio de Projetos de TI é um instrumento de monitoramento contínuo da unidade de TI que substitui o Plano de Ação, pois determina como deverão ser alocados os recursos de TI, e possibilita que o Comitê Executivo de TI exerça a governança sobre as ações da unidade.
 
--- NOVAS METAS --
- 
-## 9.2  Plano de Ações
-? PORTFOLIO DE PROJETOS ?
-<< Inserir o plano de ações, o qual definirá quais ações devem ser executadas para que as metas definidas sejam alcançadas, apontando responsáveis, prazos e recursos necessários >>
+-- novos projetos --
 
 # 10  PLANO DE GESTÃO DE PESSOAS
 << Inserir o plano de gestão de pessoas, indicando o quantitativo e a qualificação dos recursos humanos necessários para se alcançar as metas e as ações estabelecidas. Caso não se disponha de quadros adequados, deve-se planejar o quantitativo e a qualificação ideal. É importante fazer esta análise considerando a execução direta e indireta (contratada) >>
